--- a/index.html
+++ b/index.html
@@ -23,7 +23,42 @@
 				
 		</div>
 	
-		<script src="theme/scripts/app.js"></script>
+		<script src="theme/scripts/cryflow.min.js"></script>
+		<script type="text/javascript">
+
+		    // on load
+		    (function($){
+
+		        // prerequisites, word timeout and array of words
+		        var wordTimeout = 1200,
+		            word_array = [
+		                "NodeJS",
+		                "GruntJS",
+		                "BowerIO",
+		                "WebDriver",
+		                "MochaJS",
+		                "ChaiJS",
+		                "SocketIO",
+		                "jQuery",
+		                "AngularJS",
+		                "ElasticSearch",
+		                "ExpressJS",
+		                "REST",
+		                "HTML5",
+		                "Jade",
+		                "CSS3",
+		                "SASS",
+		                "Git",
+		                "Foundation",
+		                "Bootstrap"
+		            ];
+
+		        // start cryflow
+		        cryflow.init('text', word_array, wordTimeout);
+
+		    })();
+
+		</script>
 
 	</body>
 </html>
